WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
17138
REGRESSION: Node highlight not updated properly
https://bugs.webkit.org/show_bug.cgi?id=17138
Summary
REGRESSION: Node highlight not updated properly
Matt Lilek
Reported
2008-02-01 09:40:58 PST
After Adam's reworking of the node highlight code yesterday, the highlight no longer updates on Windows when switching dom nodes until the inspected window is focused. Also, while docked, the node highlights can disappear completely at times. For example: 1. Load the testcase in the URL and inspect the Top div - the highlight is correct. 2. Switch to the Bottom div - the hole for the Top div is gone and the entire webview is faded grey. 3. Click in the inspected window - the hole for the Bottom div appears. 4. Dock the inspector. 5. Walk the DOM from <html> down and notice the different highlight behaviors, especially how toggling back and forth between the Top and Bottom divs never causes a hole to appear.
Attachments
patch with changelog
(3.19 KB, patch)
2008-02-07 12:10 PST
,
Adam Roben (:aroben)
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Matt Lilek
Comment 1
2008-02-01 09:53:52 PST
(In reply to
comment #0
)
> After Adam's reworking of the node highlight code yesterday [snip]
For future reference, that would be the following check ins: <
http://trac.webkit.org/projects/webkit/changeset/29886
> <
http://trac.webkit.org/projects/webkit/changeset/29887
> <
http://trac.webkit.org/projects/webkit/changeset/29888
>
Mark Rowe (bdash)
Comment 2
2008-02-01 10:47:55 PST
<
rdar://problem/5719869
>
Adam Roben (:aroben)
Comment 3
2008-02-07 11:43:38 PST
I think the problem is that we translate the context before scrolling the element into view, which could change how much we need to translate by.
Adam Roben (:aroben)
Comment 4
2008-02-07 12:10:14 PST
Created
attachment 18988
[details]
patch with changelog
Darin Adler
Comment 5
2008-02-07 12:20:30 PST
Comment on
attachment 18988
[details]
patch with changelog r=me + context.translate(-overlayRect.x(), -overlayRect.y()); Should we use save/restore instead?
Adam Roben (:aroben)
Comment 6
2008-02-07 12:22:37 PST
(In reply to
comment #5
)
> (From update of
attachment 18988
[details]
[edit]) > + context.translate(-overlayRect.x(), -overlayRect.y()); > > Should we use save/restore instead?
I think it would be "in addition to" rather than "instead". I think we could save/restore in case the InspectorClient wanted to do more drawing of its own, but since the hope is that all drawing will go through this method I don't think it's really necessary.
Adam Roben (:aroben)
Comment 7
2008-02-07 15:37:10 PST
Fixed in
r30081
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug