        Fix Bug 17138: REGRESSION: Node highlight not updated properly

<http://bugs.webkit.org/show_bug.cgi?id=17138>
        <rdar://problem/5719869>

        Reviewed by Darin.

        No test possible.

        * page/InspectorController.cpp:
        (WebCore::InspectorController::drawNodeHighlight): Update the
        overlayRect after scrolling to make sure that we translate the context
        by the correct amount.


git-svn-id: svn://svn.chromium.org/blink/trunk@30081 bbb929c8-8fbe-4397-9dbb-9b2b20218538