third_party/WebKit/WebCore/page/InspectorController.cpp
@@ -1602,10 +1602,6 @@ void InspectorController::drawNodeHighlight(GraphicsContext& context) const
     if (!m_highlightedNode)
         return;
 
-    FrameView* view = m_inspectedPage->mainFrame()->view();
-    FloatRect overlayRect = static_cast<ScrollView*>(view)->visibleContentRect();
-    context.translate(-overlayRect.x(), -overlayRect.y());
-
     RenderObject* renderer = m_highlightedNode->renderer();
     if (!renderer)
         return;
@@ -1617,6 +1613,9 @@ void InspectorController::drawNodeHighlight(GraphicsContext& context) const
     if (rects.isEmpty())
         rects.append(nodeRect);
 
+    FrameView* view = m_inspectedPage->mainFrame()->view();
+    FloatRect overlayRect = static_cast<ScrollView*>(view)->visibleContentRect();
+
     if (!overlayRect.contains(nodeRect) && !nodeRect.contains(enclosingIntRect(overlayRect))) {
         Element* element;
         if (m_highlightedNode->isElementNode())
@@ -1624,7 +1623,10 @@ void InspectorController::drawNodeHighlight(GraphicsContext& context) const
         else
             element = static_cast<Element*>(m_highlightedNode->parent());
         element->scrollIntoViewIfNeeded();
+        overlayRect = static_cast<ScrollView*>(view)->visibleContentRect();
     }
+
+    context.translate(-overlayRect.x(), -overlayRect.y());
 
     // Draw translucent gray fill, out of which we will cut holes.
     context.fillRect(overlayRect, overlayFillColor);
